--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.7.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.11.1"
   }
 }
