fix: add whatspp_number in db

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DATABASE_URL="mysql://root:root123@localhost:3306/Emp_management" 
+DATABASE_URL="mysql://root:123456@localhost:3306/Emp_management" 
