refactor: update database model references from 'employee' to 'emp_management' and adjust seeding logic

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+DATABASE_URL="mysql://root:password@localhost:3306/employee_db"
 PORT=3000
-DATABASE_URL="mysql://root:123456@localhost:3306/Emp_management" 
+API_TOKEN="secret_token"
