--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.7.0"
+    "mysql2": "^3.7.0",
+    "puppeteer": "^24.14.0",
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.31.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "prisma": "^6.12.0"
